fixing some stuff

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -4,6 +4,9 @@ font = JetBrainsMono Nerd Font:size=16
 # 'alt' makes both Alts act as Meta/Alt modifiers
 # modifier-alt = yes
 
+[colors]
+alpha = 0.8
+
 [cursor]
 style = block
 blink = yes
