some udpates. keybaord layouts still have bugs.

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -2,8 +2,8 @@
 font = JetBrainsMono Nerd Font:size=16
 # This tells foot how to handle the Alt keys
 # 'alt' makes both Alts act as Meta/Alt modifiers
-# modifier-alt = yes
-
+modifier-alt = yes
+meta-mapping=esc
 [colors]
 alpha = 0.8
 
