--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,18 @@
 # Key bindings
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
-bind-key -n 'M-h' select-pane -L
-bind-key -n 'M-j' select-pane -D
-bind-key -n 'M-k' select-pane -U
-bind-key -n 'M-l' select-pane -R
-bind k switch-client -p
-bind j switch-client -n
-bind l choose-tree -s
+unbind-key -a
+set -g prefix None
+set -g mouse on
+set -g status-position top
+set -g history-limit 10000
+set -s escape-time 0
+bind-key -n M-w new-window -c "#{pane_current_path}"
+bind-key -n M-q kill-window
+bind-key -n M-j next-window
+bind-key -n M-k previous-window
+bind-key -n M-e choose-tree -w
+bind-key -n M-d choose-session
+bind-key -n M-s command-prompt -p "New Session Name:" "new-session -s '%%'"
+bind-key -n M-c kill-session
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -15,13 +20,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 
+# Theme
 set -g @dracula-plugins "cwd time"
 set -g @dracula-show-left-icon session
 set -g @dracula-show-left-sep 
 set -g @dracula-show-right-sep 
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
-set -g status-position top
-
 
 run '~/.config/tmux/plugins/tpm/tpm'
