--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,30 +1,32 @@
-# Key bindings
-unbind-key -a
+# General
 set -g prefix None
 set -g mouse on
 set -g status-position top
 set -g history-limit 10000
 set -s escape-time 0
-bind-key -n M-w new-window -c "#{pane_current_path}"
-bind-key -n M-q kill-window
-bind-key -n M-j next-window
-bind-key -n M-k previous-window
-bind-key -n M-e choose-tree -w
-bind-key -n M-d choose-session
-bind-key -n M-s command-prompt -p "New Session Name:" "new-session -s '%%'"
-bind-key -n M-c kill-session
+set -g base-index 1           
+setw -g pane-base-index 1     
+set -g renumber-windows on    
 
-# List of plugins
+# List of plugins (AFTER base-index)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Key bindings
+unbind-key -a
+bind-key -n M-w new-window -c "#{pane_current_path}"
+bind-key -n M-q kill-window
+bind-key -n M-k next-window
+bind-key -n M-j previous-window
+bind-key -n M-e choose-tree -w
+bind-key -n M-d choose-session
+bind-key -n M-s new-session  
+bind-key -n M-c kill-session
 
 # Theme
 set -g @dracula-plugins "cwd time"
 set -g @dracula-show-left-icon session
-set -g @dracula-show-left-sep 
-set -g @dracula-show-right-sep 
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
 
