--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set -s escape-time 0
 set -g base-index 1           
 setw -g pane-base-index 1     
 set -g renumber-windows on    
-
+set -s copy-command 'wl-copy'
 # List of plugins (AFTER base-index)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -22,7 +22,9 @@ bind-key -n M-j previous-window
 bind-key -n M-e choose-tree -w
 bind-key -n M-d choose-session
 bind-key -n M-s new-session  
-bind-key -n M-c kill-session
+bind-key -n M-x kill-session
+bind-key -n M-c copy-mode
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 
 # Theme
 set -g @dracula-plugins "cwd time"
