--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,35 +1,24 @@
-# General
-set -g prefix None
-set -g mouse on
+# Essential Settings for Fish Control
+set -g prefix None           # Disables tmux prefix (Fish handles everything)
+set -g status on
+set -g mouse on              # Keep mouse support
 set -g status-position top
 set -g history-limit 10000
 set -s escape-time 0
-set -g base-index 1           
-setw -g pane-base-index 1     
-set -g renumber-windows on    
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
 set -s copy-command 'wl-copy'
-# List of plugins (AFTER base-index)
+setw -g mode-keys vi
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
-
-# Key bindings
-unbind-key -a
-bind-key -n M-w new-window -c "#{pane_current_path}"
-bind-key -n M-q kill-window
-bind-key -n M-k next-window
-bind-key -n M-j previous-window
-bind-key -n M-e choose-tree -w
-bind-key -n M-d choose-session
-bind-key -n M-s new-session  
-bind-key -n M-x kill-session
-bind-key -n M-c copy-mode
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
-
+# bind-key -n M-c copy-mode
 # Theme
 set -g @dracula-plugins "cwd time"
 set -g @dracula-show-left-icon session
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
 
+# Initialize TPM (keep this at bottom)
 run '~/.config/tmux/plugins/tpm/tpm'
