updating more stuff

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Essential Settings for Fish Control
-set -g prefix None           # Disables tmux prefix (Fish handles everything)
+# set -g prefix None           # Disables tmux prefix (Fish handles everything)
 set -g status on
 set -g mouse on              # Keep mouse support
 set -g status-position top
@@ -20,5 +20,32 @@ set -g @dracula-show-left-icon session
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
 
+# Key bindings
+unbind-key -a
+bind-key -n M-t new-window -c "#{pane_current_path}"
+bind-key -n M-q kill-window
+bind-key -n M-j next-window
+bind-key -n M-k previous-window
+bind-key -n M-l switch-client -n
+bind-key -n M-h switch-client -p
+bind-key -n M-e choose-tree -w
+bind-key -n M-d choose-session
+bind-key -n M-s new-session  
+bind-key -n M-x kill-session
+bind-key -n M-v copy-mode
+bind-key -T copy-mode-vi i send-keys -X cancel
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+bind-key -T copy-mode-vi h send-keys -X cursor-left
+bind-key -T copy-mode-vi j send-keys -X cursor-down
+bind-key -T copy-mode-vi k send-keys -X cursor-up
+bind-key -T copy-mode-vi l send-keys -X cursor-right
+bind-key -T copy-mode-vi w send-keys -X next-word
+bind-key -T copy-mode-vi b send-keys -X previous-word
+bind-key -T copy-mode-vi 0 send-keys -X start-of-line
+bind-key -T copy-mode-vi $ send-keys -X end-of-line
+bind-key -T copy-mode-vi g send-keys -X history-top
+bind-key -T copy-mode-vi G send-keys -X history-bottom
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "wl-copy"
 # Initialize TPM (keep this at bottom)
 run '~/.config/tmux/plugins/tpm/tpm'
