--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,8 +24,8 @@ set -g @dracula-show-flags true
 unbind-key -a
 bind-key -n M-t new-window -c "#{pane_current_path}"
 bind-key -n M-q kill-window
-bind-key -n M-j next-window
-bind-key -n M-k previous-window
+bind-key -n M-k next-window
+bind-key -n M-j previous-window
 bind-key -n M-l switch-client -n
 bind-key -n M-h switch-client -p
 bind-key -n M-e choose-tree -w
