--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,9 @@ set -g @dracula-plugins "cwd time"
 set -g @dracula-show-left-icon session
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
+# set -g mode-style "fg=#11111b,bg=#74adc0"
+# set -g mode-style "fg=#313244,bg=#bac2de"
+set -g mode-style "fg=#9399b2,bg=#181825"
 
 # Key bindings
 unbind-key -a
