--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,5 +50,8 @@ bind-key -T copy-mode-vi g send-keys -X history-top
 bind-key -T copy-mode-vi G send-keys -X history-bottom
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "wl-copy"
+bind-key -T copy-mode-vi C-j send-keys -N 10 j
+bind-key -T copy-mode-vi C-k send-keys -N 10 k
+bind-key -T copy-mode-vi q send-keys -X clear-selection
 # Initialize TPM (keep this at bottom)
 run '~/.config/tmux/plugins/tpm/tpm'
