--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,9 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 set -s copy-command 'wl-copy'
 setw -g mode-keys vi
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+set-option -g allow-rename off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
