--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,11 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 set -s copy-command 'wl-copy'
 setw -g mode-keys vi
+set -g allow-passthrough on
+set -as terminal-features ",foot:RGB"
+set -as terminal-features ",foot:sixel"
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 set-option -g allow-rename off
